Troquei InputStream.nullInputStream() (era Java 11) por ByteArrayInput..